Fixed icon spacing

--- a/public_html/assets/css/custom.css
+++ b/public_html/assets/css/custom.css
@@ -14,3 +14,7 @@
     padding-right: 0.5rem;
   }
 }
+
+.icon-spacing a {
+  padding-right: 1rem;
+}
